# PDF-

./: .gitignore  LICENSE  README.md  __init__.py  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.git-backup/: COMMIT_EDITMSG  config  index
.git-backup/refs/heads/: master
.github/workflows/: build.yml  deploy.yml  test.yml
config/: __init__.py  settings.json  settings.py
core/: __init__.py  analytics.py  batch_processor.py  comparison.py  conversion.py  editor.py  exceptions.py  forms.py  history_manager.py  interface.py  ocr.py  optimization.py  pdf_engine.py  security.py
plugins/: __init__.py  page_numbering.py  plugin_interface.py  plugin_loader.py  watermark.py
tests/: __init__.py  test_conversion.py  test_editor.py  test_pdf_engine.py  test_performance.py
ui/: __init__.py  main_window.py  modern_style.css  shortcuts.py
ui/dialogs/: __init__.py  about_dialog.py  settings_dialog.py
ui/resources/: __init__.py
utils/: __init__.py  cache.py  file_handler.py  logger.py  performance_monitor.py  performance_optimizer.py  validators.py
